quote sell before and after fee
